--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -1,20 +1,20 @@
-#1.语法
-1.1严格区分大小写。ecmascript中的一切（变量、函数名、操作符）都区分大小写。但是不能把关键字、保留字、true、false、null用作标识符。
-1.2标识符：指变量、函数、属性名字或者函数的参数。标识符格式规则：第一个字符必须是一个字母、下划线或美元符号；其他字符还可以加上数字。
-1.3关键字和保留字。
+# 1.语法
+- 1.1严格区分大小写。ecmascript中的一切（变量、函数名、操作符）都区分大小写。但是不能把关键字、保留字、true、false、null用作标识符。
+- 1.2标识符：指变量、函数、属性名字或者函数的参数。标识符格式规则：第一个字符必须是一个字母、下划线或美元符号；其他字符还可以加上数字。
+- 1.3关键字和保留字。
 
 ---
 
-#2.变量
-2.1全局变量和局部变量（会有变量提升、变量销毁）
+# 2.变量
+- 2.1全局变量和局部变量（会有变量提升、变量销毁）
 
 ---
 
-#3.数据类型
+# 3.数据类型
 
-##3.1简单数据类型（基本数据类型5种）：Undefined、Null、Boolean、Number和String。1种复杂数据类型：Object。
+- ## 3.1简单数据类型（基本数据类型5种）：Undefined、Null、Boolean、Number和String。1种复杂数据类型：Object。
 
-###3.1.1typeof操作符:检测给定变量的数据类型
+ - ### 3.1.1typeof操作符:检测给定变量的数据类型
 
 ```
 var fn=function (){alert(a)};
@@ -32,7 +32,49 @@ console.log(typeof fn);        //function
 - 1.调用typeof null会返回“object”
 - 2.typeof只有六种返回,且都是以字符串的方式返回
 
-###3.2Undefined类型。只有一个字面量undefined。
+- ### 3.2Undefined类型。只有一个字面量值undefined。
+  ** undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰) ** 
+  典型用法是：
+  - 1.变量被声明了，但没有赋值时，就等于undefined。
+  - 2.调用函数时，应该提供的参数没有提供，该参数等于undefined。
+  - 3.对象没有赋值的属性，该属性的值为undefined。
+  - 4.函数没有返回值时，默认返回undefined。
+  
+  ```
+ var i;
+console.log(i);  //undefined
 
+f();   //undefined
 
+var obj = new Object();
+console.log(obj.p);   //undefined
 
+var x = f();   //undefined
+console.log(x);   //undefined
+
+function f(y){console.log(y)};  
+```
+ ** 注意：** 为什么会出现5个undefined呢？因为函数和变量有提升，且变量可以赋值操作。
+
+- ### 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
+ ** null表示"没有对象"，即该处不应该有值。(此处摘自阮一峰) ** 
+ 典型用法是：
+  - 1.作为函数的参数，表示该函数的参数不是对象。
+  - 2.作为对象原型链的终点。
+
+```
+Object.getPrototypeOf(Object.prototype)
+// null
+```
+ **  无论在什么情况下都没有必要把一个变量的值显式地设置为 undefined，可是同样的规则对 null 却不适用。换句话说，只要意在保存对象的变量还没有真正保存对象，就应该明确地让该变量保存 null 值。 **
+
+- ###3.4 Boolean类型。有两个字面值： true和false。
+
+``` 
+console.log(  Boolean( "Hello world!" ) ) //true
+
+```
+
+可以对任何数据类型的值调用 Boolean()函数，而且总会返回一个 Boolean 值。至于返回的
+这个值是 true 还是 false，取决于要转换值的数据类型及其实际值。下表给出了各种数据类型及其对
+应的转换规则。
