--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -76,5 +76,13 @@ console.log(  Boolean( "Hello world!" ) ) //true
 ```
 
 可以对任何数据类型的值调用 Boolean()函数，而且总会返回一个 Boolean 值。至于返回的
-这个值是 true 还是 false，取决于要转换值的数据类型及其实际值。下表给出了各种数据类型及其对
-应的转换规则。
+这个值是 true 还是 false，取决于要转换值的数据类型及其实际值。
+
+
+| 数据类型 | 转换成true | 转化成false |
+| ------------- |:-------------:| -----:|
+| Boolean | true | false |
+| String | 任何非空字符串 | ""(空字符串) |
+| Number | 任何非0数字值（包括无穷大） | 0，NaN|
+| Object | 任何对象 | null |
+| Undefined |   | undefined|
