--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -28,11 +28,10 @@ console.log(typeof []);	       //object
 console.log(typeof  / /);      //object
 console.log(typeof fn);        //function
 ```
-**注意：**
-- 1.调用typeof null会返回“object”
-- 2.typeof只有六种返回,且都是以字符串的方式返回
-
-- ### 3.2Undefined类型。只有一个字面量值undefined。
+ ** 注意：**
+ - 1.调用typeof null会返回“object”
+ - 2.typeof只有六种返回,且都是以字符串的方式返回
+- ## 3.2Undefined类型。只有一个字面量值undefined。
   ** undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰) ** 
   典型用法是：
   - 1.变量被声明了，但没有赋值时，就等于undefined。
@@ -40,8 +39,8 @@ console.log(typeof fn);        //function
   - 3.对象没有赋值的属性，该属性的值为undefined。
   - 4.函数没有返回值时，默认返回undefined。
   
-  ```
- var i;
+```
+var i;
 console.log(i);  //undefined
 
 f();   //undefined
@@ -56,7 +55,7 @@ function f(y){console.log(y)};
 ```
  ** 注意：** 为什么会出现5个undefined呢？因为函数和变量有提升，且变量可以赋值操作。
 
-- ### 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
+- ## 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
  ** null表示"没有对象"，即该处不应该有值。(此处摘自阮一峰) ** 
  典型用法是：
   - 1.作为函数的参数，表示该函数的参数不是对象。
@@ -66,9 +65,10 @@ function f(y){console.log(y)};
 Object.getPrototypeOf(Object.prototype)
 // null
 ```
+
  **  无论在什么情况下都没有必要把一个变量的值显式地设置为 undefined，可是同样的规则对 null 却不适用。换句话说，只要意在保存对象的变量还没有真正保存对象，就应该明确地让该变量保存 null 值。 **
 
-- ###3.4 Boolean类型。有两个字面值： true和false。
+- ## 3.4 Boolean类型。有两个字面值： true和false。
 
 ``` 
 console.log(  Boolean( "Hello world!" ) ) //true
