--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -32,12 +32,12 @@ console.log(typeof fn);        //function
  - 1.调用typeof null会返回“object”
  - 2.typeof只有六种返回,且都是以字符串的方式返回
 - ## 3.2Undefined类型。只有一个字面量值undefined。
-  ** undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰) ** 
-  典型用法是：
-  - 1.变量被声明了，但没有赋值时，就等于undefined。
-  - 2.调用函数时，应该提供的参数没有提供，该参数等于undefined。
-  - 3.对象没有赋值的属性，该属性的值为undefined。
-  - 4.函数没有返回值时，默认返回undefined。
+  **undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰)** 典型用法是：
+ - 1.变量被声明了，但没有赋值时，就等于undefined。
+ - 2.调用函数时，应该提供的参数没有提供，该参数等于undefined。
+ - 3.对象没有赋值的属性，该属性的值为undefined。
+ - 4.函数没有返回值时，默认返回undefined。
+  
   
 ```
 var i;
@@ -53,12 +53,13 @@ console.log(x);   //undefined
 
 function f(y){console.log(y)};  
 ```
+
  **注意：** 为什么会出现5个undefined呢？因为函数和变量有提升，且变量可以赋值操作。
 
 - ## 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
  **null表示"没有对象"，即该处不应该有值。(此处摘自阮一峰)**  典型用法是：
-  - 1.作为函数的参数，表示该函数的参数不是对象。
-  - 2.作为对象原型链的终点。
+ - 1.作为函数的参数，表示该函数的参数不是对象。
+ - 2.作为对象原型链的终点。
 
 ```
 Object.getPrototypeOf(Object.prototype)
@@ -74,6 +75,7 @@ Object.getPrototypeOf(Object.prototype)
 ```
 console.log(  Boolean( "Hello world!" ) ) //true
 ```
+
   可以对任何数据类型的值调用 Boolean()函数，而且总会返回一个 Boolean 值。至于返回的
 这个值是 true 还是 false，取决于要转换值的数据类型及其实际值。
 
@@ -85,25 +87,24 @@ console.log(  Boolean( "Hello world!" ) ) //true
 | Object | 任何对象 | null |
 | Undefined |   | undefined|
 
-
 - ## 3.5 Number类型。使用IEEE754格式表示整数和浮点数值。
 
   十进制，八进制（第一位必须是零，如果字面值中的数值超出了范围【0~7】，忽略前导0，后面值被当做十进制数值解析），十六进制前两位是0x，后跟十六进制数字
  - ### 3.5.1 浮点数值
-    - 保存浮点数值需要的内存空间是保存整数值的两倍，因此 ECMAScript 会不失时机地将浮点数值转换为整数值。
-    - 如果小数点后面没有跟任何数字，那么这个数值就可以作为整数值来保存。
-    - 如果浮点数值本身表示的就是一个整数（如 1.0），那么该值也会被转换为整数。
-    - 浮点数值的最高精度是17位小数，但在进行算术计算时其精确度远远不如整数。 0.1 加 0.2的结果不是 0.3，而是 0.30000000000000004。
-  - ### 3.5.2 数值范围
-    - 最小数值保存在 Number.MIN_VALUE 中是 5e-324；
-    - 最大数值保存在Number.MAX_VALUE 中是 1.7976931348623157e+308；
-    - 超出 JavaScript 数值范围的值，那么这个数值将被自动转换成特殊的 Infinity 值
-    - 确定一个数值是不是有穷的（换句话说，是不是位于最小和最大的数值之间），可以使用 isFinite()函数，有穷返回true
-  - ### 3.5.3 NaN
-    - NaN表示一个本来要返回数值的操作数未返回数值的情况（这样就不会抛出错误了）
-    - 任何涉及 NaN 的操作（例如 NaN/10）都会返回 NaN
-    - NaN 与任何值都不相等，包括 NaN 本身
-    - isNaN()函数。这个函数接受一个参数，该参数可以是任何类型，而函数会帮我们确定这个参数是否“不是数值”。 
+  - 保存浮点数值需要的内存空间是保存整数值的两倍，因此 ECMAScript 会不失时机地将浮点数值转换为整数值。
+  - 如果小数点后面没有跟任何数字，那么这个数值就可以作为整数值来保存。
+  - 如果浮点数值本身表示的就是一个整数（如 1.0），那么该值也会被转换为整数。
+  - 浮点数值的最高精度是17位小数，但在进行算术计算时其精确度远远不如整数。 0.1 加 0.2的结果不是 0.3，而是 0.30000000000000004。
+ - ### 3.5.2 数值范围
+  - 最小数值保存在 Number.MIN_VALUE 中是 5e-324；
+  - 最大数值保存在Number.MAX_VALUE 中是 1.7976931348623157e+308；
+  - 超出 JavaScript 数值范围的值，那么这个数值将被自动转换成特殊的 Infinity 值
+  - 确定一个数值是不是有穷的（换句话说，是不是位于最小和最大的数值之间），可以使用 isFinite()函数，有穷返回true
+ - ### 3.5.3 NaN
+  - NaN表示一个本来要返回数值的操作数未返回数值的情况（这样就不会抛出错误了）
+  - 任何涉及 NaN 的操作（例如 NaN/10）都会返回 NaN
+  - NaN 与任何值都不相等，包括 NaN 本身
+  - isNaN()函数。这个函数接受一个参数，该参数可以是任何类型，而函数会帮我们确定这个参数是否“不是数值”。 
   
   ```
 alert(isNaN(NaN)); //true
@@ -112,31 +113,31 @@ alert(isNaN("10")); //false（可以被转换成数值 10）
 alert(isNaN("blue")); //true（不能转换成数值）
 alert(isNaN(true)); //false（可以被转换成数值 1）
 ```
-  - ### 3.5.4 数值转换
-   - #### 3.5.4.1 Number()可以用于任何数据类型
-    - 如果是 Boolean 值， true 和 false 将分别被转换为 1 和 0。
-    - 如果是数字值，只是简单的传入和返回。
-    - 如果是 null 值，返回 0。
-    - 如果是 undefined，返回 NaN。
-    - 如果是字符串，遵循下列规则：
-      - 如果字符串中只包含数字（包括前面带正号或负号的情况），则将其转换为十进制数值，即"1"会变成 1， "123"会变成 123，而"011"会变成11前导零被忽了）；
-      - 如果字符串中包含有效的浮点格式，如"1.1"，则将其转换为对应的浮点数值（同样，也会忽略前导零）；
-      - 如果字符串中包含有效的十六进制格式，例如"0xf"，则将其转换为相同大小的十进制整数值；
-      - 如果字符串是空的（不包含任何字符），则将其转换为 0；
-    - 如果字符串中包含除上述格式之外的字符，则将其转换为 NaN。
-    - 如果是对象，则调用对象的 valueOf()方法，然后依照前面的规则转换返回的值。如果转换的结果是 NaN，则调用对象的 toString()方法，然后再次依照前面的规则转换返回的字符串值。 
+ - ### 3.5.4 数值转换
+  - #### 3.5.4.1 Number()可以用于任何数据类型
+   - 如果是 Boolean 值， true 和 false 将分别被转换为 1 和 0。
+   - 如果是数字值，只是简单的传入和返回。
+   - 如果是 null 值，返回 0。
+   - 如果是 undefined，返回 NaN。
+   - 如果是字符串，遵循下列规则：
+    - 如果字符串中只包含数字（包括前面带正号或负号的情况），则将其转换为十进制数值，即"1"会变成 1， "123"会变成 123，而"011"会变成11前导零被忽了）；
+    - 如果字符串中包含有效的浮点格式，如"1.1"，则将其转换为对应的浮点数值（同样，也会忽略前导零）；
+    - 如果字符串中包含有效的十六进制格式，例如"0xf"，则将其转换为相同大小的十进制整数值；
+    - 如果字符串是空的（不包含任何字符），则将其转换为 0；
+    - 如果字符串中包含除上述格式之外的字符，则将其转换为 NaN。
+   - 如果是对象，则调用对象的 valueOf()方法，然后依照前面的规则转换返回的值。如果转换的结果是 NaN，则调用对象的 toString()方法，然后再次依照前面的规则转换返回的字符串值。 
     
-   - #### 3.5.4.2 parseInt()专门用于把字符串转化成数值，有第二个参数，可以解析十进制，八进制，十六进制
-    - 会忽略字符串前面的空格，直至找到第一个非空格字符
-    - 如果第一个字符不是数字字符或者负号， parseInt()就会返回 NaN 
-   - #### 3.5.4.3 parseFloat()专门用于把字符串转化成数值
-    - 字符串中的第一个小数点是有效的，而第二个小数点就是无效的了，因此它后面的字符串将被忽略。
-    - 始终都会忽略前导的零。但十六进制格式的字符串则始终会被转换成 0。
-    - 由于 parseFloat()只解析十进制值，因此它没有用第二个参数指定基数的用法。
+  - #### 3.5.4.2 parseInt()专门用于把字符串转化成数值，有第二个参数，可以解析十进制，八进制，十六进制
+   - 会忽略字符串前面的空格，直至找到第一个非空格字符
+   - 如果第一个字符不是数字字符或者负号， parseInt()就会返回 NaN 
+  - #### 3.5.4.3 parseFloat()专门用于把字符串转化成数值
+   - 字符串中的第一个小数点是有效的，而第二个小数点就是无效的了，因此它后面的字符串将被忽略。
+   - 始终都会忽略前导的零。但十六进制格式的字符串则始终会被转换成 0。
+   - 由于 parseFloat()只解析十进制值，因此它没有用第二个参数指定基数的用法。
 
 - ## 3.6 String类型。
  - ### 3.6.1 toString()方法
-    - null 和 undefined 值没有这个方法。
+  - null 和 undefined 值没有这个方法。
    
    ```
    var age = 11;
@@ -150,6 +151,7 @@ alert(isNaN(true)); //false（可以被转换成数值 1）
    alert(num.toString(10)); // "10"
    alert(num.toString(16)); // "a"
 ```
+
  - ### 3.6.2 String()转型函数
   String()这个函数能够将任何类型的值转换为字符串，遵循下列转换规则：
   - 如果值有 toString()方法，则调用该方法（没有参数）并返回相应的结果；
