--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -12,9 +12,9 @@
 
 # 3.数据类型
 
-- ## 3.1简单数据类型（基本数据类型5种）：Undefined、Null、Boolean、Number和String。1种复杂数据类型：Object。
+## 3.1简单数据类型（基本数据类型5种）：Undefined、Null、Boolean、Number和String。1种复杂数据类型：Object。
 
- - ### 3.1.1typeof操作符:检测给定变量的数据类型
+### 3.1.1typeof操作符:检测给定变量的数据类型
 
 ```
 var fn=function (){alert(a)};
@@ -31,8 +31,9 @@ console.log(typeof fn);        //function
  **注意：**
  - 1.调用typeof null会返回“object”
  - 2.typeof只有六种返回,且都是以字符串的方式返回
-- ## 3.2Undefined类型。只有一个字面量值undefined。
-  **undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰)** 典型用法是：
+ ## 3.2Undefined类型。只有一个字面量值undefined。
+  
+ **undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。(此处摘自阮一峰)** 典型用法是：
  - 1.变量被声明了，但没有赋值时，就等于undefined。
  - 2.调用函数时，应该提供的参数没有提供，该参数等于undefined。
  - 3.对象没有赋值的属性，该属性的值为undefined。
@@ -66,11 +67,11 @@ Object.getPrototypeOf(Object.prototype)
 // null
 ```
 
- **无论在什么情况下都没有必要把一个变量的值显式地设置为 undefined，可是同样的规则对 null 却不适用。换句话说，只要意在保存对象的变量还没有真正保存对象，就应该明确地让该变量保存 null 值。 **
+ **无论在什么情况下都没有必要把一个变量的值显式地设置为 undefined，可是同样的规则对 null 却不适用。换句话说，只要意在保存对象的变量还没有真正保存对象，就应该明确地让该变量保存 null 值**
 
 
 
-- ## 3.4 Boolean类型。有两个字面值： true和false。
+## 3.4 Boolean类型。有两个字面值： true和false。
 
 ```
 console.log(  Boolean( "Hello world!" ) ) //true
@@ -87,20 +88,20 @@ console.log(  Boolean( "Hello world!" ) ) //true
 | Object | 任何对象 | null |
 | Undefined |   | undefined|
 
-- ## 3.5 Number类型。使用IEEE754格式表示整数和浮点数值。
+## 3.5 Number类型。使用IEEE754格式表示整数和浮点数值。
 
   十进制，八进制（第一位必须是零，如果字面值中的数值超出了范围【0~7】，忽略前导0，后面值被当做十进制数值解析），十六进制前两位是0x，后跟十六进制数字
- - ### 3.5.1 浮点数值
+### 3.5.1 浮点数值
   - 保存浮点数值需要的内存空间是保存整数值的两倍，因此 ECMAScript 会不失时机地将浮点数值转换为整数值。
   - 如果小数点后面没有跟任何数字，那么这个数值就可以作为整数值来保存。
   - 如果浮点数值本身表示的就是一个整数（如 1.0），那么该值也会被转换为整数。
   - 浮点数值的最高精度是17位小数，但在进行算术计算时其精确度远远不如整数。 0.1 加 0.2的结果不是 0.3，而是 0.30000000000000004。
- - ### 3.5.2 数值范围
+### 3.5.2 数值范围
   - 最小数值保存在 Number.MIN_VALUE 中是 5e-324；
   - 最大数值保存在Number.MAX_VALUE 中是 1.7976931348623157e+308；
   - 超出 JavaScript 数值范围的值，那么这个数值将被自动转换成特殊的 Infinity 值
   - 确定一个数值是不是有穷的（换句话说，是不是位于最小和最大的数值之间），可以使用 isFinite()函数，有穷返回true
- - ### 3.5.3 NaN
+### 3.5.3 NaN
   - NaN表示一个本来要返回数值的操作数未返回数值的情况（这样就不会抛出错误了）
   - 任何涉及 NaN 的操作（例如 NaN/10）都会返回 NaN
   - NaN 与任何值都不相等，包括 NaN 本身
@@ -113,8 +114,8 @@ alert(isNaN("10")); //false（可以被转换成数值 10）
 alert(isNaN("blue")); //true（不能转换成数值）
 alert(isNaN(true)); //false（可以被转换成数值 1）
 ```
- - ### 3.5.4 数值转换
-  - #### 3.5.4.1 Number()可以用于任何数据类型
+### 3.5.4 数值转换
+#### 3.5.4.1 Number()可以用于任何数据类型
    - 如果是 Boolean 值， true 和 false 将分别被转换为 1 和 0。
    - 如果是数字值，只是简单的传入和返回。
    - 如果是 null 值，返回 0。
@@ -127,16 +128,16 @@ alert(isNaN(true)); //false（可以被转换成数值 1）
     - 如果字符串中包含除上述格式之外的字符，则将其转换为 NaN。
    - 如果是对象，则调用对象的 valueOf()方法，然后依照前面的规则转换返回的值。如果转换的结果是 NaN，则调用对象的 toString()方法，然后再次依照前面的规则转换返回的字符串值。 
     
-  - #### 3.5.4.2 parseInt()专门用于把字符串转化成数值，有第二个参数，可以解析十进制，八进制，十六进制
+#### 3.5.4.2 parseInt()专门用于把字符串转化成数值，有第二个参数，可以解析十进制，八进制，十六进制
    - 会忽略字符串前面的空格，直至找到第一个非空格字符
    - 如果第一个字符不是数字字符或者负号， parseInt()就会返回 NaN 
-  - #### 3.5.4.3 parseFloat()专门用于把字符串转化成数值
+#### 3.5.4.3 parseFloat()专门用于把字符串转化成数值
    - 字符串中的第一个小数点是有效的，而第二个小数点就是无效的了，因此它后面的字符串将被忽略。
    - 始终都会忽略前导的零。但十六进制格式的字符串则始终会被转换成 0。
    - 由于 parseFloat()只解析十进制值，因此它没有用第二个参数指定基数的用法。
 
-- ## 3.6 String类型。
- - ### 3.6.1 toString()方法
+## 3.6 String类型。
+### 3.6.1 toString()方法
   - null 和 undefined 值没有这个方法。
    
    ```
@@ -152,7 +153,7 @@ alert(isNaN(true)); //false（可以被转换成数值 1）
    alert(num.toString(16)); // "a"
 ```
 
- - ### 3.6.2 String()转型函数
+### 3.6.2 String()转型函数
   String()这个函数能够将任何类型的值转换为字符串，遵循下列转换规则：
   - 如果值有 toString()方法，则调用该方法（没有参数）并返回相应的结果；
   - 如果值是 null，则返回"null"；
@@ -169,7 +170,7 @@ alert(String(value3)); // "null"
 alert(String(value4)); // "undefined"
 ```
 
-- ## 3.7 Object类型。
+## 3.7 Object类型。
 
 Object 类型所具有的任何属性和方法也同样存在于更具体的对象中。
 Object 的每个实例都具有下列属性和方法。
