--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -189,6 +189,20 @@ Object 的每个实例都具有下列属性和方法。
  - valueOf()：返回对象的字符串、数值或布尔值表示。通常与 toString()方法的返回值
 相同。
 
+### 3.7.1对象內型的检测
+```
+alert(person instanceof Object); // 变量 person 是 Object 吗？
+alert(colors instanceof Array); // 变量 colors 是 Array 吗？
+alert(pattern instanceof RegExp); // 变量 pattern 是 RegExp 吗？
+```
+因此，在检测一个引用类型值和 Object 构造函数时， instanceof 操作符始终会返回 true。
+当然，如果使用 instanceof 操作符检测基本类型的值，则该操作符始终会返回 false，因为基本类型不是对象。
+
+
+
+
+
+
 
 
 
