--- a/docs/四.鼠标的属性获取.md
+++ b/docs/四.鼠标的属性获取.md
@@ -1,7 +1,6 @@
 
-
-后面为一些常用属性方便查找：
-
+```
+**后面为一些常用属性方便查找：**
 clientHeight     获取对象的高度，不计算任何边距、边框、滚动条，但包括该对象的补白。
 clientLeft     获取    offsetLeft     属性和客户区域的实际左边之间的距离。
 clientTop     获取    offsetTop     属性和客户区域的实际顶端之间的距离。
@@ -15,7 +14,6 @@ offsetX     设置或获取鼠标指针位置相对于触发事件的对象的  
 offsetY     设置或获取鼠标指针位置相对于触发事件的对象的    y     坐标。
 clientX,clientY   鼠标当前相对于网页的位置，当鼠标位于页面左上角时clientX=0, clientY=0
 screenX, screenY是相对于用户显示器的位置
-
 网页可见区域宽： document.body.clientWidth
 网页可见区域高： document.body.clientHeight
 网页可见区域宽： document.body.offsetWidth    (包括边线的宽)
@@ -30,3 +28,5 @@ screenX, screenY是相对于用户显示器的位置
 屏幕分辨率的宽： window.screen.width
 屏幕可用工作区高度： window.screen.availHeight
 屏幕可用工作区宽度：window.screen.availWidth
+```
+
