--- a/docs/四.鼠标的属性获取.md
+++ b/docs/四.鼠标的属性获取.md
@@ -14,14 +14,14 @@ offsetX     设置或获取鼠标指针位置相对于触发事件的对象的  
 offsetY     设置或获取鼠标指针位置相对于触发事件的对象的    y     坐标。
 clientX,clientY   鼠标当前相对于网页的位置，当鼠标位于页面左上角时clientX=0, clientY=0
 screenX, screenY是相对于用户显示器的位置
-网页可见区域宽： document.body.clientWidth
-网页可见区域高： document.body.clientHeight
+网页可见区域宽： document.body.clientWidth  ||  document.documentElement.clientWidth
+网页可见区域高： document.body.clientHeight ||  document.documentElement.clientHeight
 网页可见区域宽： document.body.offsetWidth    (包括边线的宽)
 网页可见区域高： document.body.offsetHeight   (包括边线的宽)
 网页正文全文宽： document.body.scrollWidth
 网页正文全文高： document.body.scrollHeight
-网页被卷去的高： document.body.scrollTop
-网页被卷去的左： document.body.scrollLeft
+网页被卷去的高： document.body.scrollTop  ||  document.documentElement.scrollTop
+网页被卷去的左： document.body.scrollLeft   ||  document.documentElement.scrollLeft
 网页正文部分上： window.screenTop
 网页正文部分左： window.screenLeft
 屏幕分辨率的高： window.screen.height
@@ -29,4 +29,6 @@ screenX, screenY是相对于用户显示器的位置
 屏幕可用工作区高度： window.screen.availHeight
 屏幕可用工作区宽度：window.screen.availWidth
 ```
+
+
 
