--- a/docs/三.引用类型.md
+++ b/docs/三.引用类型.md
@@ -1,6 +1,216 @@
-# 1.数组
+# 1.Array数组类型
 ## 1.1数组的检测
- 也可以使用Array.isArray()方法。
- 
+- 使用Array.isArray(value)方法,ie9+。
+- 使用instanceof检测 （value instanceof Array）返回布尔值
+## 1.2数组转换方法
+- 调用数组的 toString()方法会返回由数组中每个值的字符串形式拼接而成的一个以逗号分隔的字符串。即：数组拼接的字符串
+- 调用 valueOf()返回的还是数组。即：数组
+- 由于 alert()要接收字符串参数，所以它会在后台调用 toString()方法。
+- 调用数组的 toLocaleString()方法时，它也会创建一个数组值的以逗号分隔的字符串。
+
+```
+var arr=["1",2,3,4];
+console.log(arr.toString());
+if(typeof arr.toString()=='string' ){
+  alert(arr.toString());  //弹出1,2,3,4
+
+}
+else if( arr.toString() instanceof Array){
+   alert('object');
+}else{
+  alert("其他");
+}
+
+```
+
+```
+var arr=["1",2,3,4];
+if(typeof arr.valueOf()=='string' ){
+ alert(arr.valueOf());
+}
+else if( arr.valueOf() instanceof Array){
+ alert('object');     //弹出object
+}else{
+ alert("其他");
+}
+
+```
+## 1.3栈方法
+- push()方法可以接收任意数量的参数，把它们逐个添加到数组末尾，并返回修改后数组的长度。
+- pop()方法则从数组末尾移除最后一项，减少数组的 length 值，然后返回移除的项。
+
+```
+var colors = new Array(); // 创建一个数组
+var count = colors.push("red", "green"); // 推入两项
+alert(count); //2
+count = colors.push("black"); // 推入另一项
+alert(count); //3
+var item = colors.pop(); // 取得最后一项
+alert(item); //"black"
+alert(colors.length); //2
+```
+## 1.4队列方法
+- shift()能够**移除**数组中的第一个项并**返回该项**，同时将数组长度减 1。  
+- unshift()能在数组前端添加任意个项并返回新数组的长度。
+## 1.5重排序方法
+- reverse()方法会反转数组项的顺序。
+- sort()方法会调用每个数组项的 toString()转型方法，然后比较得到的字符串，以确定如何排序。即使数组中的每一项都是数值， sort()方法比较的也是字符串
+
+```
+function compare(value1, value2) {
+if (value1 < value2) {
+return -1;
+} else if (value1 > value2) {
+return 1;
+} else {
+return 0;
+}
+}
+
+var values = [0, 1, 5, 10, 15];
+values.sort(compare);
+alert(values); //0,1,5,10,15
+
+```
+## 1.6操作方法
+- 传递给 concat()方法的是一或多个数组，则该方法会将这些数组中的每一项都添加到结果数组中。如果传递的值不是数组，这些值就会被简单地添加到结果数组的末尾。
+
+```
+var colors = ["red", "green", "blue"];
+var colors2 = colors.concat("yellow", ["black", "brown"]);
+alert(colors); //red,green,blue
+alert(colors2); //red,green,blue,yellow,black,brown
+
+```
+- slice()创建一个新数组。 slice()方法可以接受一或两个参数，即要返回项的起始和结束位置(但不包括结束位置的项)。
+- splice(起始位置, 0（要删除的项数）,要插入的项,要插入的项)
+
+## 1.7找位置方法
+-  indexOf()和 lastIndexOf()。这两个方法都接收两个参数：要查找的项和（可选的）表示查找起点位置的索引。
+```
+var numbers = [1,2,3,4,5,4,3,2,1];
+alert(numbers.indexOf(4)); //3
+alert(numbers.lastIndexOf(4)); //5
+```
+
+## 1.8迭代方法
+- every()：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
+- filter()：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
+- forEach()：对数组中的每一项运行给定函数。这个方法没有返回值。
+- map()：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
+- some()：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
+
+```
+var numbers = [1,2,3,4,5,4,3,2,1];
+var everyResult = numbers.every(function(item, index, array){
+return (item > 2);
+});
+alert(everyResult); //false
+
+var someResult = numbers.some(function(item, index, array){
+return (item > 2);
+});
+alert(someResult); //true
+
+var filterResult = numbers.filter(function(item, index, array){
+return (item > 2);
+});
+alert(filterResult); //[3,4,5,4,3]
+
+var filterResult = numbers.map(function(item, index, array){
+return (item * 2);
+});
+alert(filterResult); //[2,4,6,8,10,8,6,4,2]
+
+```
+## 1.9归并方法
+- reduce()和 reduceRight()。这两个方法都会迭代数组的所有项，然后构建一个最终返回的值。其中， reduce()方法从数组的第一项开始，逐个遍历到最后。
+- 接收 4 个参数：前一个值、当前值、项的索引和数组对象。这个函数返回的任何值都会作为第一个参数自动传给下一项。
+```
+var values = [1,2,3,4,5];
+var sum = values.reduce(function(prev, cur, index, array){
+return prev + cur;
+});
+alert(sum); //15
+ArrayReductionExample01.htm
+第一次执行回调函数， prev 是 1， cur 是 2。第二次， prev 是 3（1 加 2 的结果）， cur 是 3（数组
+的第三项）。这个过程会持续到把数组中的每一项都访问一遍，最后返回结果。
+```
+
+
+# 2.Date类型
+## 2.1创建时间
+- var now = new Date();//获得当前日期和时间
+- Date.parse()方法接收一个表示日期的字符串参数，然后尝试根据这个字符串返回相应日
+期的毫秒数。
+```
+alert(Date.parse(new Date ("2017.06.2") )/1000)   //1496332800 将时间格式转成时间戳
+new Date(parseInt(nS) * 1000).toLocaleString().substr(0,17)  //将时间戳转成日期格式
+```
+## 2.2继承的方法
+Date 类型也重写了 toLocaleString()、toString()和 valueOf()方法；但这些方法返回的值与其他类型中的方法不同。 
+
+## 2.3日期格式化方法
+Date 类型还有一些专门用于将日期格式化为字符串的方法，这些方法如下。
+- toDateString()——以特定于实现的格式显示星期几、月、日和年；
+- toTimeString()——以特定于实现的格式显示时、分、秒和时区；
+- toLocaleDateString()——以特定于地区的格式显示星期几、月、日和年；
+- toLocaleTimeString()——以特定于实现的格式显示时、分、秒；
+- toUTCString()——以特定于实现的格式完整的 UTC 日期。
+
+## 2.4日期|时间组件方法
+
+```
+方 法 说 明：
+| Tables | Are | 
+| ------------- |:-------------:|
+| getTime() | 返回表示日期的毫秒数；与valueOf()方法返回的值相同
+ | setTime(毫秒) |  以毫秒数设置日期，会改变整个日期
+ | getFullYear() |  取得4位数的年份（如2007而非仅07）
+ | getUTCFullYear() |  返回UTC日期的4位数年份
+ | setFullYear(年) |  设置日期的年份。传入的年份值必须是4位数字（如2007而非仅07）
+ | setUTCFullYear(年) |  设置UTC日期的年份。传入的年份值必须是4位数字（如2007而非仅07）
+ | getMonth()  | 返回日期中的月份，其中0表示一月， 11表示十二月
+ | getUTCMonth()  | 返回UTC日期中的月份，其中0表示一月， 11表示十二月
+ | setMonth(月)  | 设置日期的月份。传入的月份值必须大于0，超过11则增加年份
+ | setUTCMonth(月) |  设置UTC日期的月份。传入的月份值必须大于0，超过11则增加年份
+ | getDate()  | 返回日期月份中的天数（1到31）
+ | getUTCDate()  | 返回UTC日期月份中的天数（1到31）
+ | setDate(日)  | 设置日期月份中的天数。如果传入的值超过了该月中应有的天数，则增加月份
+ | setUTCDate(日)  | 设置UTC日期月份中的天数。如果传入的值超过了该月中应有的天数，则增加月份
+ | getDay()  | 返回日期中星期的星期几（其中0表示星期日， 6表示星期六）
+ | getUTCDay()  | 返回UTC日期中星期的星期几（其中0表示星期日， 6表示星期六）
+ | getHours() |  返回日期中的小时数（0到23）
+ | getUTCHours()  | 返回UTC日期中的小时数（0到23）
+ | setHours(时) |  设置日期中的小时数。传入的值超过了23则增加月份中的天数
+ | setUTCHours(时)  | 设置UTC日期中的小时数。传入的值超过了23则增加月份中的天数
+ | getMinutes()  |  返回日期中的分钟数（0到59）
+ | getUTCMinutes()  | 返回UTC日期中的分钟数（0到59）
+ | setMinutes(分)  | 设置日期中的分钟数。传入的值超过59则增加小时数
+ | setUTCMinutes(分) |  设置UTC日期中的分钟数。传入的值超过59则增加小时数
+ | getSeconds()  | 返回日期中的秒数（0到59）
+ | getUTCSeconds()  | 返回UTC日期中的秒数（0到59）
+ | setSeconds(秒)  | 设置日期中的秒数。传入的值超过了59会增加分钟数
+ | setUTCSeconds(秒)  | 设置UTC日期中的秒数。传入的值超过了59会增加分钟数
+ | getMilliseconds()  | 返回日期中的毫秒数
+ | getUTCMilliseconds() v返回UTC日期中的毫秒数
+ | setMilliseconds(毫秒) |  设置日期中的毫秒数
+ | setUTCMilliseconds(毫秒) |  设置UTC日期中的毫秒数
+ | getTimezoneOffset() |  返回本地时间与UTC时间相差的分钟数。例如，美国东部标准时间返回300。在某
+地进入夏令时的情况下，这个值会有所变化
+```
+
+# 3.RegExp类型
+## 
+
+
+
+
+
+
+
+
+
+
 
 
