--- a/docs/三.引用类型.md
+++ b/docs/三.引用类型.md
@@ -201,13 +201,41 @@ Date 类型还有一些专门用于将日期格式化为字符串的方法，这
 ```
 
 # 3.RegExp类型
-## 
+正则表达式更加详细的看司徒正美大神博客：
+https://www.cnblogs.com/rubylouvre/archive/2010/03/09/1681222.html
 
+# 4.Function类型
+## 4.1函数没有重载的概念
+## 4.2函数声明与函数的表达式
+## 4.3作为值的函数
+## 4.4函数内部属性 
+### 4.4.1 两个特殊的对象： arguments 和 this。
+### 4.4.2 函数属性和方法 每个函数都包含两个属性： length 和 prototype。
+- length 属性表示函数希望接收的命名参数的个数
+```
+function sayName(name){
+alert(name);
+}
+function sum(num1, num2){
+return num1 + num2;
+}
+function sayHi(){
+alert("hi");
+}
+alert(sayName.length); //1
+alert(sum.length); //2
+alert(sayHi.length); //0
+```
 
+- prototype 是保存它们所有实例方法的真正所在。详细见冯羽博客：https://github.com/mqyqingfeng/Blog
+- 每个函数都包含两个非继承而来的方法： apply()和 call()。
 
+## 4.5基本包装类型
+### 4.5.1Boolean
+### 4.5.1Number
+### 4.5.1String
 
-
-
+# Math对象
 
 
 
