--- a/docs/一.数据类型.md
+++ b/docs/一.数据类型.md
@@ -57,10 +57,10 @@ function f(y){console.log(y)};
 
  **注意：** 为什么会出现5个undefined呢？因为函数和变量有提升，且变量可以赋值操作。
 
-- ## 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
+## 3.3Null类型。只有一个字面量值null，该值表示一个空对象指针，因此使用typeof会返回“object”。
  **null表示"没有对象"，即该处不应该有值。(此处摘自阮一峰)**  典型用法是：
- - 1.作为函数的参数，表示该函数的参数不是对象。
- - 2.作为对象原型链的终点。
+- 1.作为函数的参数，表示该函数的参数不是对象。
+- 2.作为对象原型链的终点。
 
 ```
 Object.getPrototypeOf(Object.prototype)
@@ -107,13 +107,14 @@ console.log(  Boolean( "Hello world!" ) ) //true
 - NaN 与任何值都不相等，包括 NaN 本身
 - isNaN()函数。这个函数接受一个参数，该参数可以是任何类型，而函数会帮我们确定这个参数是否“不是数值”。 
   
-  ```
+ ```
 alert(isNaN(NaN)); //true
 alert(isNaN(10)); //false（ 10 是一个数值）
 alert(isNaN("10")); //false（可以被转换成数值 10）
 alert(isNaN("blue")); //true（不能转换成数值）
 alert(isNaN(true)); //false（可以被转换成数值 1）
 ```
+
 ### 3.5.4 数值转换
 #### 3.5.4.1 Number()可以用于任何数据类型
 - 如果是 Boolean 值， true 和 false 将分别被转换为 1 和 0。
@@ -140,6 +141,7 @@ alert(isNaN(true)); //false（可以被转换成数值 1）
 ### 3.6.1 toString()方法
 - null 和 undefined 值没有这个方法。
    
+   
    ```
    var age = 11;
    var ageAsString = age.toString(); // 字符串"11"
@@ -150,14 +152,15 @@ alert(isNaN(true)); //false（可以被转换成数值 1）
    alert(num.toString(2)); // "1010"
    alert(num.toString(8)); // "12"
    alert(num.toString(10)); // "10"
-   alert(num.toString(16)); // "a"
-```
+   alert(num.toString(16)); // "a" ```
+
 
 ### 3.6.2 String()转型函数
   String()这个函数能够将任何类型的值转换为字符串，遵循下列转换规则：
 - 如果值有 toString()方法，则调用该方法（没有参数）并返回相应的结果；
 - 如果值是 null，则返回"null"；
 - 如果值是 undefined，则返回"undefined"。
+
 
 ```
 var value1 = 10;
@@ -190,11 +193,13 @@ Object 的每个实例都具有下列属性和方法。
 相同。
 
 ### 3.7.1对象內型的检测
+
 ```
 alert(person instanceof Object); // 变量 person 是 Object 吗？
 alert(colors instanceof Array); // 变量 colors 是 Array 吗？
 alert(pattern instanceof RegExp); // 变量 pattern 是 RegExp 吗？
 ```
+
 因此，在检测一个引用类型值和 Object 构造函数时， instanceof 操作符始终会返回 true。
 当然，如果使用 instanceof 操作符检测基本类型的值，则该操作符始终会返回 false，因为基本类型不是对象。
 
