--- a/docs/四.鼠标的属性获取.md
+++ b/docs/四.鼠标的属性获取.md
@@ -1,6 +1,8 @@
 
-```
+
 **后面为一些常用属性方便查找：**
+
+```
 clientHeight     获取对象的高度，不计算任何边距、边框、滚动条，但包括该对象的补白。
 clientLeft     获取    offsetLeft     属性和客户区域的实际左边之间的距离。
 clientTop     获取    offsetTop     属性和客户区域的实际顶端之间的距离。
@@ -22,8 +24,8 @@ screenX, screenY是相对于用户显示器的位置
 网页正文全文高： document.body.scrollHeight
 网页被卷去的高： document.body.scrollTop  ||  document.documentElement.scrollTop
 网页被卷去的左： document.body.scrollLeft   ||  document.documentElement.scrollLeft
-网页正文部分上： window.screenTop
-网页正文部分左： window.screenLeft
+网页正文部分上： window.screenTop  ||  window.screenY
+网页正文部分左： window.screenLeft  ||   window.screenX
 屏幕分辨率的高： window.screen.height
 屏幕分辨率的宽： window.screen.width
 屏幕可用工作区高度： window.screen.availHeight
